--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:background="@drawable/backgroundhome"
     tools:context=".MainActivity">
 
+
     <LinearLayout
         android:id="@+id/linearlayoutbar"
         android:layout_width="match_parent"
@@ -17,106 +18,126 @@
         <include layout="@layout/bar" />
     </LinearLayout>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:padding="10dp"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="72dp"
-        android:layout_marginEnd="50dp"
-        app:cardCornerRadius="10dp"
-        android:backgroundTint="#FCF7F4"
-        app:cardElevation="46dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/linearlayoutbar">
+        app:layout_constraintTop_toBottomOf="@+id/linearlayoutbar">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content">
 
-            <ImageView
-                android:layout_width="136dp"
-                android:layout_height="wrap_content"
-                android:background="#FCF7F4"
-                android:scaleType="fitXY"
-                android:layout_gravity="start"
-                android:src="@drawable/scanme" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/scanCamera"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|end"
-                android:background="@drawable/button"
-                android:padding="10dp"
-                android:text="scan using camera" />
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-    </androidx.cardview.widget.CardView>
-
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="50dp"
-        android:backgroundTint="#FCF7F4"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView">
-
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="horizontal">
-
-
-            <ImageView
-                android:layout_width="136dp"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView"
+                android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:scaleType="fitXY"
-                android:layout_gravity="start"
-                android:src="@drawable/scann" />
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="72dp"
+                android:layout_marginEnd="50dp"
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/scanGallery"
-                android:layout_width="wrap_content"
+                android:backgroundTint="#FCF7F4"
+                android:padding="10dp"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="46dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="136dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:background="#FCF7F4"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/scanme" />
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/scanCamera"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center|end"
+                        android:background="@drawable/button"
+                        android:padding="10dp"
+                        android:text="scan using camera" />
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+            </androidx.cardview.widget.CardView>
+
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView2"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center|end"
-                android:layout_marginStart="10dp"
-                android:background="@drawable/button"
-                android:padding="5dp"
-                android:text="Scan from gallery"
-                android:textColor="@color/black" />
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginEnd="50dp"
+                android:backgroundTint="#FCF7F4"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="50dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cardView">
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal">
 
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
+                    <ImageView
+                        android:layout_width="136dp"
+                        android:layout_height="100dp"
+                        android:layout_gravity="start"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/scann" />
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/scanGallery"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center|end"
+                        android:layout_marginStart="10dp"
+                        android:background="@drawable/button"
+                        android:padding="5dp"
+                        android:text="Scan from gallery"
+                        android:textColor="@color/black" />
 
 
-    </androidx.cardview.widget.CardView>
+                </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="201dp"
-        android:text="TextView"
-        android:onClick="copy"
 
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+            </androidx.cardview.widget.CardView>
+
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="result will be shown here"
+                android:onClick="copy"
+                android:layout_marginTop="50dp"
+                android:textSize="15sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
