--- a/app/src/main/res/layout/activity_show_data.xml
+++ b/app/src/main/res/layout/activity_show_data.xml
@@ -38,7 +38,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-        <TextView
+        <EditText
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
