--- a/app/src/main/res/layout/bar.xml
+++ b/app/src/main/res/layout/bar.xml
@@ -26,7 +26,7 @@
         android:layout_weight="1"
         android:textSize="18sp"
         android:layout_marginStart="12dp"
-        android:text="AI Qr Scanner"
+        android:text="Your Food Scanner"
         />
 
 
