--- a/app/src/main/res/drawable/backgroundhome2.xml
+++ b/app/src/main/res/drawable/backgroundhome2.xml
@@ -3,16 +3,9 @@
 
     <item>
         <shape android:shape="rectangle">
-            <gradient
-                android:startColor="#DCF4FF"
-                android:centerColor="#FFFFFF"
-                android:endColor="#FBEBCF"
-                />
-            <corners
-                android:radius="30dp"
-                />
-            <stroke android:width="1dp"
-                android:color="#80000000"/>
+            <solid android:color="#CCCCCC" />
+            <corners android:radius="10dp" />
+            <stroke android:width="5dp" android:color="@color/black" />
 
         </shape>
     </item>
