--- a/app/src/main/res/layout/bar.xml
+++ b/app/src/main/res/layout/bar.xml
@@ -9,24 +9,17 @@
     android:layout_marginBottom="5dp"
     android:padding="13dp"
     android:elevation="-500dp"
-    android:background="@drawable/backgroundhome2"
     android:gravity="center_vertical"
+    android:background="@drawable/backgroundhome2"
     android:id="@+id/toolbarHome">
 
-    <ImageView
-        android:layout_marginStart="15dp"
-        android:layout_width="27dp"
-        android:layout_height="27dp"
-        android:src="@drawable/qrcode80by80"
-
-        />
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="18sp"
+        android:text="Result"
         android:layout_marginStart="12dp"
-        android:text="Your Food Scanner"
+        android:textSize="20sp"
         />
 
 
