--- a/app/src/main/res/layout/custom_show_data.xml
+++ b/app/src/main/res/layout/custom_show_data.xml
@@ -10,33 +10,22 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Empty"
-        android:textSize="17sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/appCompatTextView1"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:singleLine="true"
 
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/appCompatTextView1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Empty"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/materialButton"
-        app:layout_constraintStart_toEndOf="@+id/appCompatTextView"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.button.MaterialButton
+
+    <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/materialButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#D54A4A4A"
-        android:text="Copy"
-        android:textColor="@color/white"
-        app:cornerRadius="10dp"
-
+        android:src="@drawable/icon_copy_all_24"
+        android:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
