--- a/app/src/main/res/layout/custom_show_data.xml
+++ b/app/src/main/res/layout/custom_show_data.xml
@@ -5,32 +5,18 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="20dp">
 
-    <androidx.appcompat.widget.AppCompatTextView
+
+    <TextView
         android:id="@+id/appCompatTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
         android:singleLine="true"
-        android:text="Empty"
-
-
+        android:text="Emp gjk ld j f g klsfd ljsdfty"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/materialButton1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-
-    <!--<androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/materialButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#D54A4A4A"
-        android:src="@drawable/icon_copy_all_24"
-        android:tint="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />-->
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/materialButton1"
